wrong alignment when topic selector page button color change onclick bug fixed.

--- a/Website/css/main.css
+++ b/Website/css/main.css
@@ -236,12 +236,6 @@ display: inline-block}
 }
 .topic-picker-grid.selected {
     background:#8ed6ee;
-    margin:0 0 3em;
-    display: block;
-    float:left;
-    width:30%;
-    margin-left:1.5%;
-    margin-right:1.5%
 }
 
 .topic-picker-image {
